k8s/ingress-jaeger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jaeger
  namespace: mymicroservices
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - mymicroservices.com
      secretName: mymicroservices-tls
  rules:
    - host: mymicroservices.com
      http:
        paths:
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger-query-svc
                port:
                  number: 16686
