k8s/ingress-mailhog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mailhog
  namespace: mymicroservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - mymicroservices.com
      secretName: mymicroservices-tls
  rules:
    - host: mymicroservices.com
      http:
        paths:          
          - path: /mailhog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mailhog-web-svc
                port:
                  number: 8025
